--- a/src/components/SharedIdentity/IdentityCard/identityCard.styles.scss
+++ b/src/components/SharedIdentity/IdentityCard/identityCard.styles.scss
@@ -76,10 +76,6 @@
     }
   }
 
-  .flex-1 {
-    flex: 1;
-  }
-
   .multilayer-percentage-bar {
     .legend-dot-container {
       @extend .mt-0;
